# ai_drone_gazebo

./: CMakeLists.txt  README.md  package.xml
models/Challenge1Walls/: model.config  model.sdf
models/Inner_Walls_1/: model.config  model.sdf
models/OutsideWallsWhite/: model.config  model.sdf
models/concrete_ground_plane/: model.sdf
models/ground_plane/: model.sdf
models/rotors_description/urdf/: iris_base.xacro
models/tag16_05_00000/: model.config  model.sdf
models/tag16_05_00000/material/scripts/: tag16_05_00000.material
models/tag16_05_00001/: model.config  model.sdf
models/tag16_05_00001/material/scripts/: tag16_05_00001.material
models/tag16_05_00002/: model.config  model.sdf
models/tag16_05_00002/material/scripts/: tag16_05_00002.material
models/tag16_05_00003/: model.config  model.sdf
models/tag16_05_00003/material/scripts/: tag16_05_00003.material
models/tag16_05_00004/: model.config  model.sdf
models/tag16_05_00004/material/scripts/: tag16_05_00004.material
models/tag16_05_00005/: model.config  model.sdf
models/tag16_05_00005/material/scripts/: tag16_05_00005.material
models/tag36_11_00000/: model.config  model.sdf
models/tag36_11_00000/material/scripts/: tag36_11_00000.material
models/tag36_11_00001/: model.config  model.sdf
models/tag36_11_00002/: model.config  model.sdf
models/tag36_11_00003/: model.config  model.sdf
models/tag36_11_00004/: model.config  model.sdf
models/tag36_11_00005/: model.config  model.sdf
worlds/: Challenge1World.world  ai_battle_drone_world1.world  empty_world.world
(+5 files in other folders)
