<?xml version="1.0"?>
<package format="2">
  <name>ai_drone_gazebo</name>
  <version>0.0.0</version>
  <description>Contains gazebo stuff</description>
  <maintainer email="michael.d.yocius@lmco.com">Mike Yocius</maintainer>

  <license>Lockheed</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
